  systems' assembly code (asmrun/arm64.S).  Add CFI directives to enable
  unwinding through [caml_c_call] and [caml_call_gc] with correct termination
  of unwinding at [main].
  (Mark Shinwell, review by Xavier Leroy and Gabriel Scherer, with thanks
  to Daniel Bünzli and Fu Yong Quah for testing)

- GPR#1338: Add "-g" for bytecode runtime system compilation
  (Mark Shinwell)

### Manual and documentation:

- MPR#6548: remove obsolete limitation in the description of private
  type abbreviations
  (Florian Angeletti, suggestion by Leo White)

- MPR#6676, GPR#1110: move record notation to tutorial
  (Florian Angeletti, review by Gabriel Scherer)

- MPR#6676, GPR#1112: move local opens to tutorial
  (Florian Angeletti)

- MPR#6676, GPR#1153: move overriding class definitions to reference
  manual and tutorial
  (Florian Angeletti)

- MPR#6709: document the associativity and precedence level of
  pervasive operators
  (Florian Angeletti, review by David Allsopp)

- MPR#7254, GPR#1096: Rudimentary documentation of ocamlnat
  (Mark Shinwell)

- MPR#7281, GPR#1259: fix .TH macros in generated manpages
  (Olaf Hering)

- MPR#7507: Align the description of the printf conversion
  specification "%g" with the ISO C90 description.
  (Florian Angeletti)

- MPR#7551, GPR#1194 : make the final ";;" potentially optional in
  caml_example
  (Florian Angeletti, review and suggestion by Gabriel Scherer)

- MPR#7588, GPR#1291: make format documentation predictable
  (Florian Angeletti, review by Gabriel Radanne)

- MPR#7604: Minor Ephemeron documentation fixes
  (Miod Vallat, review by Florian Angeletti)

- GPR#1187: Minimal documentation for compiler plugins
  (Florian Angeletti)

- GPR#1202: Fix Typos in comments as well as basic grammar errors.
  (JP Rodi, review and suggestions by David Allsopp, Max Mouratov,
  Florian Angeletti, Xavier Leroy, Mark Shinwell and Damien Doligez)

- GPR#1220: Fix "-keep-docs" option in ocamlopt manpage
  (Etienne Millon)
