@@ -372,6 +372,9 @@ void caml_sys_init(char_os * exe_name, char_os **argv)
   /* Initialises the caml_win32_* globals on Windows with the version of
      Windows which is running */
   caml_probe_win32_version();
+#if WINDOWS_UNICODE
+  caml_setup_win32_terminal();
+#endif
 #endif
 #ifdef CAML_WITH_CPLUGINS
   caml_cplugins_init(exe_name, argv);
