@@ -475,6 +475,9 @@ Release branch for 4.06:
 - GPR#1338: Add "-g" for bytecode runtime system compilation
   (Mark Shinwell)
 
+* GPR#1416: switch the Windows 10 Console to UTF-8 encoding.
+  (David Allsopp, reviews by Nicolás Ojeda Bär and Xavier Leroy)
+
 ### Manual and documentation:
 
 - MPR#6548: remove obsolete limitation in the description of private
